--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -67,10 +67,18 @@
 .itemContainer .itemTitle h3 {
   margin-bottom: 0;
   font-size: 35px;
+  margin-top: 20px;
 }
 
 .itemCardContainer {
   display: flex;
   flex-wrap: wrap;
   /* justify-content: space-evenly; */
+}
+
+
+@media screen and (min-width: 1345px) {
+.itemCardContainer {
+  justify-content: space-between;
+}
 }
